# snowflake-dbt-quality-ref

./: .gitignore  README.md  pyproject.toml
dags/: order_items_ingestion_pipeline.py  orders_ingestion_pipeline.py  products_ingestion_pipeline.py  users_ingestion_pipeline.py
dags/tasks/: ecom_tasks.py
data/: products_1.csv  users_1.csv
ecom-airflow/: docker-compose.override.yml  gcp-permissions.sh  requirements.txt
ecom-airflow/dags/: order_items_ingestion_pipeline.py  orders_ingestion_pipeline.py  products_ingestion_pipeline.py  users_ingestion_pipeline.py
ecom-airflow/dags/tasks/: ecom_tasks.py
ecom_dbt/: dbt_project.yml  package-lock.yml  packages.yml
ecom_dbt/macros/: generate_schema_name.sql
ecom_dbt/models/: sources.yml
ecom_dbt/models/mart/: time_between_orders_per_user.sql  top_users_items_by_tier.sql
ecom_dbt/models/mart/tests/: time_between_orders_per_user_data_tests.yml  top_uses_by_tier_data_tests.yml
ecom_dbt/models/reporting/: order_items_fact.sql  products_dim.sql  users_dim.sql
ecom_dbt/models/reporting/tests/: order_items_fact_docs.yml  products_dim_docs.yml  users_dim_data_tests.yml  users_dim_unit_tests.yml
ecom_dbt/models/staging/: order_items_staged.sql  orders_staged.sql  products_staged.sql  products_staged_data_tests.yml  products_staged_unit_tests.yml  users_staged.sql
ecom_dbt/models/staging/tests/: order_staged_data_tests.yml  orders_staged_unit_tests.yml  (+3 more)
ecom_dbt/snapshots/: products_staged
ecom_dbt/tests/generic/: expect_columns_value_by_tier.sql
snowflake-setup/: setup.sql  tables.sql
